--- a/examples/cdk/tsconfig.json
+++ b/examples/cdk/tsconfig.json
@@ -3,9 +3,7 @@
     "target": "ES2018",
     "module": "commonjs",
     "skipLibCheck": true,
-    "lib": [
-      "es2018"
-    ],
+    "lib": ["es2018"],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
@@ -20,10 +18,7 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "types": []
+    "types": ["jest"]
   },
-  "exclude": [
-    "node_modules",
-    "cdk.out"
-  ]
+  "exclude": ["node_modules", "cdk.out"]
 }
